<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:layout_gravity="center"
        android:background="@color/white">

    <TextView
            android:id="@+id/titleText"
            style="@style/defaultTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/large_text"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/add_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/latitudeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/latitude_hint"
            android:inputType="numberDecimal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/longitudeEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/longitude_hint"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/latitudeEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/labelEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label_hint"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/longitudeEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/addressEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/address_hint"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/labelEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/cancelButton"
            style="@style/defaultTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:padding="10dp"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            app:layout_constraintTop_toBottomOf="@id/addressEditText"
            app:layout_constraintEnd_toStartOf="@id/okButton"
            android:background="?attr/selectableItemBackground"/>

    <TextView
            android:id="@+id/okButton"
            style="@style/defaultTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@drawable/ok_button_color_selector"
            android:text="@string/ok"
            android:textStyle="bold"
            android:padding="@dimen/small_margin"
            android:enabled="false"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintTop_toBottomOf="@id/addressEditText"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="?attr/selectableItemBackground"
            android:textAllCaps="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>